--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +65,23 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+
+.nav-link{
+  margin-left: 40px;
+}
+
+#supportHero{
+  background-color: rgb(104, 104, 221);
+  color: white;
+}
+#supportHero a{
+  /* background-color: rgb(104, 104, 221); */
+  color: white;
+}
+
+#supportWrap{
+  display: flex;
+  justify-content: space-between;
 }
